# mire

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
assets/: .gitginore
example/: CMakeLists.txt  menu_scene.h
mire/: CMakelists.txt  mire.h
mire/audio/: bgm.h  sfx.h
mire/core/: baseobject.cpp  baseobject.h  color.cpp  color.h  control.h  core.h  file.cpp  file.h  font.cpp  font.h  game.cpp  game.h  layer.h  log.h  object.cpp  object.h  physic.h  rect.cpp  rect.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sprite.h  texture.h  utils.h  vector.cpp  vector.h  window.h
mire/err/: err.h
mire/ui/: button.h  input.h  label.cpp  label.h  ui.h
src/: main.cpp  menu_scene.cpp  menu_scene.h
